src/tests/snapshots/cendol__tests__parser_typeof__typeof_comma_expr.snap
---
source: src/tests/parser_typeof.rs
expression: decl
---
Declaration:
  specifiers:
    - TypeofExpr(5)
  init_declarators:
    - name: x
