src/tests/snapshots/cendol__tests__parser_typeof__typeof_expr.snap
---
source: src/tests/parser_typeof.rs
expression: decl
---
Declaration:
  specifiers:
    - TypeofExpr(4)
  init_declarators:
    - name: x
