src/tests/snapshots/cendol__tests__parser_typeof__typeof_type.snap
---
source: src/tests/parser_typeof.rs
expression: decl
---
Declaration:
  specifiers:
    - "Typeof(ParsedType { base: 1, declarator: 1, qualifiers: TypeQualifiers(0x0) })"
  init_declarators:
    - name: x
